# MovieCodecPlugin

./: .gitignore  CMakeLists.txt  ChangeLog.md  MakePackage.bat  README.md  Run.bat  readme.md
Mod/MovieCodecPlugin/: main.lua
ffmpeg-4.0-win32/include/libavutil/: ffversion.h
ffmpeg20140501Compiled/: README.txt
ffmpeg20140501Compiled/include/libavutil/: ffversion.h
ffmpegMovieCodecPlugin/: AddCompileLinkFlags.cmake  AudioCapture.cpp  AudioCapture.h  AudioMixer - 副本.cpp  AudioMixer.cpp  AudioMixer.h  AudioRecordAudioFromMicrophone.cpp  AudioRecordAudioFromMicrophone.h  CMakeLists.txt  CaptureFrameData.cpp  CaptureFrameData.h  MovieCodec.cpp  MovieCodec.h  MovieCodecPlugin.cpp  MovieCodecPlugin.def  MovieCodecPlugin.h  readme.txt  stdafx.cpp  stdafx.h
x64-windows-static/include/: x264.h
x64-windows-static/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  fdk-aac.lib  libmp3lame-static.lib  libmpghip-static.lib  libpostproc.lib  libx264.lib  swresample.lib  swscale.lib
x86-windows-static/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  fdk-aac.lib  libmp3lame-static.lib  libmpghip-static.lib  libpostproc.lib  libx264.lib  swresample.lib  swscale.lib
x86/include/libavutil/: ffversion.h
x86/lib/: libavdevice.lib  libavutil.lib  libpostproc.lib  libswresample.lib  libswscale.lib  libx264.lib  mp3lame.lib
