# Author: LiXizhi
# Company: ParaEngine.com
# Date: 2014.5.1
# Desc: movie encoder using precompiled version of ffmpeg. See http://ffmpeg.zeranoe.com/builds/
# add environment variable NPLRUNTIME_ROOT that point to git root of NPLRuntime.
# NOTE: modify the root directory path if it is installed at a different location. 

# Note: include the ParaEngine/NPLRuntime include directory

add_subdirectory (ffmpegMovieCodecPlugin)
